assets/src/components/routes/ConnectionActions/ConnectionActions.css
.connection-actions {
	margin-top: 30px;
}

.connection-actions__instructions {
	margin-bottom: 50px;
}

.connection-actions__instructions-text a {
	color: var(--sl-color-primary-600);
	display: block;
	font-weight: 600;
	margin-top: 10px;
	width: max-content;
}

.connection-actions__action-type {
	margin: auto;
	border-bottom: 0 !important;
	border-radius: 0 !important;
}

.connection-actions__action-type:first-child {
	border-top-left-radius: var(--radius) !important;
	border-top-right-radius: var(--radius) !important;
}

.connection-actions__action-type:last-child {
	margin-bottom: 0 !important;
	border-bottom: 1px solid var(--sl-color-neutral-200) !important;
	border-bottom-left-radius: var(--radius) !important;
	border-bottom-right-radius: var(--radius) !important;
}

.connection-actions .section {
	max-width: 1600px;
}

.connection-actions__grid {
	margin-top: 10px;
}

.connection-actions__add::part(base) {
	min-height: unset;
}

.connection-actions__add::part(label) {
	line-height: 1;
	padding-left: 0;
}

.connection-actions__action-name {
	display: flex;
	gap: 8px;
}

.connection-actions__action-logo svg {
	height: 20px;
}

.connection-actions__action-name-description {
	font-size: 14px;
	color: #777;
}

.connection-actions__action-filter > div:first-child {
	margin-top: 0;
}

.connection-actions__action-filter > div {
	font-size: 12px;
	opacity: 0.7;
	font-family: var(--monospace-fonts);
	word-break: break-word;
	margin-top: 5px;
}

.connection-actions__buttons {
	display: flex;
	gap: 10px;
	justify-content: end;
}

.connection-actions__execution-info-title {
	font-weight: 500;
	font-size: 13px;
}

.connection-actions__execution-info ul {
	padding-left: 17px;
	margin-top: 5px;
	margin-bottom: 5px;
}

.connection-actions__buttons .feedback-button__tooltip-content {
	min-width: 300px;
}

.connection-actions__buttons .feedback-button__tooltip-content--info {
	padding-top: 27px;
}

.connection-actions__scheduler-button::part(base) {
	min-width: 132px;
	justify-content: left;
}

.connection-actions__scheduler-button::part(suffix) {
	margin-left: auto;
}

.connection-actions__scheduler-button::part(label) {
	padding-right: 6px;
}

.connection-actions__scheduler-dot {
	font-size: 8px;
	color: var(--sl-color-neutral-400);
	transition: color 0.3s;
}

.connection-actions__scheduler-dot--success {
	color: var(--sl-color-success-600);
}

.connection-actions__scheduler-options {
	padding-left: 20px;
	padding-right: 20px;
}

.connection-actions__run-button > sl-icon[name='play'] {
	font-size: 16px;
}

.connection-actions__dialog::part(body) {
	padding-bottom: 30px;
}

.connection-actions__dialog .list-tile {
	margin-bottom: 15px;
}

.connection-actions__dialog .list-tile:last-child {
	margin-bottom: 0;
}

.connection-actions__dialog-event-action-types-title {
	font-weight: 600;
	margin-top: 25px;
	margin-bottom: 10px;
}

.connection-actions__link-to-metrics {
	margin-top: 10px;
}

.connection-actions__link {
	color: var(--sl-color-primary-500);
	text-decoration: underline;
	cursor: pointer;
	font-weight: 600;
}

.connection-actions__linked-destinations {
	margin-top: 50px;
}

.connection-actions__linked-sources {
	margin-bottom: 50px;
}

.connection-actions__linked-destinations .linked-connection-selector__head-title {
	font-weight: 600;
}

.connection-actions__linked-sources .linked-connection-selector__head-title {
	font-weight: 600;
}

.connection-actions__action-type--users:has(+ .connection-actions__action-type--events) {
	margin-bottom: 10px;
	border-bottom: 1px solid var(--sl-color-neutral-200) !important;
	border-bottom-left-radius: var(--radius) !important;
	border-bottom-right-radius: var(--radius) !important;
}

.connection-actions__action-type--users + .connection-actions__action-type--events {
	border-top-left-radius: var(--radius) !important;
	border-top-right-radius: var(--radius) !important;
}

.connection-actions__menu .connection-actions__run-button::part(base) {
	border: 0;
	background-color: transparent;
}

.connection-actions__delete::part(base):hover {
	transition:
		background-color 0.3s,
		color 0.3s;
	background-color: var(--sl-color-danger-600);
	color: var(--text-onaccent);
}

.connection-actions__buttons-dropdown .connection-actions__run-button::part(base) {
	padding: 0;
	border-radius: 0;
	font-size: 16px;
	font-weight: 400;
}

.connection-actions__buttons-dropdown .connection-actions__run-button::part(base):hover {
	transition:
		background-color 0.3s,
		color 0.3s;
	background-color: var(--sl-color-primary-500);
	color: var(--text-onaccent);
}

.connection-actions__buttons-dropdown .connection-actions__run-button-tooltip,
.connection-actions__buttons-dropdown .connection-actions__manage-button {
	display: none;
}

.connection-actions__buttons-dropdown .connection-actions__run-button-tooltip::part(base__arrow) {
	background-color: var(--bg-gray);
	border: 1px solid var(--sl-color-neutral-300);
	z-index: 10;
	border-bottom: 0;
	border-left: 0;
}

@media screen and (max-width: 1440px) {
	.connection-actions__buttons > .connection-actions__manage-button {
		display: none;
	}

	.connection-actions__buttons-dropdown .connection-actions__manage-button {
		display: block;
	}
}

@media screen and (max-width: 1320px) {
	.connection-actions__buttons > .connection-actions__run-button-tooltip {
		display: none;
	}

	.connection-actions__buttons-dropdown .connection-actions__run-button-tooltip {
		display: block;
	}
}

